Bug 273600 - Window does not scroll to new file location after renaming
Summary: Window does not scroll to new file location after renaming
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-19 00:52 UTC by Nathan Shearer
Modified: 2011-05-19 14:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nathan Shearer 2011-05-19 00:52:13 UTC
Version:           4.6.2 (using KDE 4.6.2) 
OS:                Linux

Open a folder with lots of files (perhaps mp3's). Rename a file at the top to something that begins with "z". The file's new location will be near the bottom but Konqueror does not automatically scroll to the selected file.

The older versions automatically scrolled properly. This and it is a very annoying regression.

Reproducible: Always

Steps to Reproduce:
See the details.

Actual Results:  
See the details.

Expected Results:  
Konqueror should automatically scroll to the selected file after it is renamed.

OS: Linux (x86_64) release 2.6.35.9
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Frank Reininghaus 2011-05-19 14:09:19 UTC
Thanks for reporting this bug. I can confirm the issue in Konqueror and Dolphin.

It's a regression caused by

https://projects.kde.org/projects/kde/kdebase/kde-baseapps/repository/revisions/78669f2a57ecfb547019383deadf4aeac7d20070

Never trust 'silent' commits ;-)

I'll fix this in a minute.
Comment 2 Frank Reininghaus 2011-05-19 14:13:48 UTC
Git commit 54f34a941f85efa659392a06b14fee86f1420bf5 by Frank Reininghaus.
Committed on 19/05/2011 at 14:09.
Pushed by freininghaus into branch 'KDE/4.6'.

Fix DolphinView regression in 4.6: Keep renamed items visible

Commit 78669f2a57ecfb547019383deadf4aeac7d20070 introduced a regression
in DolphinView which disabled the automatic scrolling after a rename
operation to keep the renamed item visible. This commit reverts a part
of that change to re-enable the feature.
BUG: 273600
4.6.4

M  +4    -0    dolphin/src/views/dolphinview.cpp     

http://commits.kde.org/kde-baseapps/54f34a941f85efa659392a06b14fee86f1420bf5
Comment 3 Frank Reininghaus 2011-05-19 14:17:30 UTC
Git commit c1bfaec4c23d41b128b2ea0f173ed4fc9451a4ac by Frank Reininghaus.
Committed on 19/05/2011 at 14:09.
Pushed by freininghaus into branch 'master'.

Fix DolphinView regression in 4.6: Keep renamed items visible

Commit 78669f2a57ecfb547019383deadf4aeac7d20070 introduced a regression
in DolphinView which disabled the automatic scrolling after a rename
operation to keep the renamed item visible. This commit reverts a part
of that change to re-enable the feature.
CCBUG: 273600
FIXED-IN: 4.6.4
(cherry picked from commit 54f34a941f85efa659392a06b14fee86f1420bf5)

M  +4    -0    dolphin/src/views/dolphinview.cpp     

http://commits.kde.org/kde-baseapps/c1bfaec4c23d41b128b2ea0f173ed4fc9451a4ac