Fix DolphinView regression in 4.6: Keep renamed items visible

Commit 78669f2a57ecfb547019383deadf4aeac7d20070 introduced a regression
in DolphinView which disabled the automatic scrolling after a rename
operation to keep the renamed item visible. This commit reverts a part
of that change to re-enable the feature.
BUG: 273600
4.6.4